[package]
name = "dreid-kernel"
version = "0.4.0"
authors = [
    "Tony Kan <tonykan@caltech.edu>",
    "William A. Goddard III <wag@caltech.edu>",
]
license = "MIT"
repository = "https://github.com/caltechmsc/dreid-kernel"
edition = "2024"
description = "A high-performance, no-std Rust library providing pure mathematical primitives and stateless energy kernels for the DREIDING force field."
keywords = [
    "chemistry",
    "physics",
    "molecular-dynamics",
    "force-field",
    "dreiding",
]
categories = [
    "science::computational-chemistry::molecular-simulation",
    "no-std",
]
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[dependencies]
libm = { version = "0.2.16", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.2"

[lib]
name = "dreid_kernel"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["std"]
std = []
libm = ["dep:libm"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
